app/assets/stylesheets/countries/filter.scss
.container {
  position:relative;
}

.filter-section.hide-filter {
  position: abolute;
  top: -1000px;
  -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
          transition: all 0.5s ease;
}

.filter-section {
  position: absolute;
  top:0;
  background: #fff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.4);
  z-index: 1000;
  -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
          transition: all 0.5s ease;
}

.filter-form-wrapper {
  overflow:hidden;
  position:absolute;
  height:500px;
  padding:5px;
}

.toggle_states {
  display: inline-block;
  text-align: center;
  color:#aaa;
}

.switch_wrapper {
  line-height: 1;
  float:right;
  text-align: right;
  label {
    margin-bottom: 0;
  }
}

.switch_label_wrapper {
}

.category_switch_wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 5px;
  padding:5px;
  background:#fff;
}

.filter-section {
  background: #eee;
  h3 {
    text-align:center;
  }
}
/* The switch - the box around the slider */
.switch {
 position: relative;
 display: inline-block;
 width: 60px;
 height: 34px;
 vertical-align: middle;
}

/* Hide default HTML checkbox */
.switch input {display:none;}

/* The slider */
.slider {
 position: absolute;
 cursor: pointer;
 top: 0;
 left: 0;
 right: 0;
 bottom: 0;
 background-color: #ccc;
 -webkit-transition: .05s ease;
 transition: .05s ease;
}

.slider:before {
 position: absolute;
 content: "";
 height: 26px;
 width: 26px;
 left: 4px;
 bottom: 4px;
 background-color: white;
 box-shadow: 0 0 3px rgba(0,0,0,0.4);
 -webkit-transition: .05s ease;
 transition: .05s ease;
}

input:checked + .slider {
 background-color: #2196F3;
}

input:focus + .slider {
 box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
 -webkit-transform: translateX(26px);
 -ms-transform: translateX(26px);
 transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
 border-radius: 34px;
 box-shadow: inset 0 0 1px rgba(0,0,0,0.4);
}

.slider.round:before {
 border-radius: 50%;
}


/* Category Range */

.category-range {
  background: white;
  padding:10px;
  margin-bottom:10px;
}

.category-range-row {
  font-size: 0; /* collapse whitespace between inline-block elements */
}

.category-range-header {
  line-height: 30px;
  margin:0;
}

.range_slider{
	position: absolute;
	height: 10px;
	background: url('https://s12.postimg.org/86n3b78p9/range_before.png') repeat top left;
}

.range_tooltip {
	position: absolute;
	display: block;
	top: -1px;
  left:-1px;
	width: 20px;
	height: 20px;
  line-height:20px;
	text-align: center;
	color: #464646;
	font-family: Arial, sans-serif;
  font-size: 12px;
}

.range_slider.ui-slider .ui-slider-handle {
	position: absolute;
	z-index: 2;
	width: 20px;
	height: 20px;
	cursor: pointer;
	background: #fff;
	outline: none;
  border: 1px solid #ddd;
  border-radius: 50%;
  box-shadow: 0 0 1px rgba(0,0,0,0.4);
}

.range_slider.ui-slider .ui-slider-range {
	background: url('https://s12.postimg.org/qq1dousb1/range_filled.png') no-repeat center/cover;
	position: absolute;
	border: 0;
	top: 0;
	height: 100%;
	border-radius: 25px;
}

.textarea_one, .textarea_two {
	margin-top: -5px;
	margin-left: -25px;
  font-weight: 700;
	font-family: Arial;
	font-size: 16px;
	color: #959595;
}

.range_min input,
.range_max input {
  display: inline-block;
  width:100%;
}

.range_input_row {
  margin-bottom: 10px;
}

/* make filter buttons clickable on iOS devices */


#showCategorySwitches{
  cursor:pointer;
}
#showCategoryDealBreakers{
  cursor:pointer;
}
#showCategoryWeights{
  cursor:pointer;
}

